# gst-plugins-rs

gst-plugin-tutorial/: Cargo.toml
gst-plugin-tutorial/src/: lib.rs
