[package]
name = "gst-plugin-tutorial"
version = "0.1.0"
authors = ["Fei Wong <fei.wong@harmonicinc.com>"]
repository = "https://github.com/wongfei2009/gst-plugins-rs/tree/master/gst-plugin-tutorial"
license = "MIT/Apache-2.0"
edition = "2018"
description = "Rust Tutorial Plugin"

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
once_cell = "1.0"

[lib]
name = "gstrstutorial"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
